--- a/app/src/main/res/layout/activity_mock_location.xml
+++ b/app/src/main/res/layout/activity_mock_location.xml
@@ -53,4 +53,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/longInput" />
 
+    <Button
+        android:id="@+id/cancel_btn"
+        android:layout_width="93dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="50dp"
+        android:onClick="onCancelButtonClicked"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/done_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/longInput"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
